backend-yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2 #Количество подов в кластере
  selector:
    matchLabels:
      app: backend #указывает, какие поды должен управлять Deployment.
  template:
    metadata:
      labels:
        app: backend #именнование подов
    spec:
      containers:
      - name: backend
        image: kostomarush/flaskback:v1.0 #Образ контейнеров
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5050 #прокидывает порт контейнера внутри кластера
      - name: postgres
        image: postgres:16
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          hostPath:
            path: /mnt/data
