backend-yaml/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx  # Указываем, какой Ingress-контроллер используем
  rules:
  - host: flaskapp.local #Доменное имя, по которому будет доступен backend
    http:
      paths:
      - path: /tables
        pathType: Prefix
        backend:
          service:
            name: backend # Имя Service, к которому пойдёт трафи
            port:
              number: 5050             # Порт, на который передаётся трафик
